--- a/src/pages/productlist.astro
+++ b/src/pages/productlist.astro
@@ -30,11 +30,11 @@ const options = {
             <section class="category_desktop">
                 <p>Sorter efter: </p>
                 <button class="aktivknap">Alle</button>
-                <button>Klods</button>
-                <button>Plade</button>
-                <button>Hældning</button>
-                <button>Vindue</button>
-                <button>Andet</button>
+                <button>klods</button>
+                <button>plade</button>
+                <button>hældning</button>
+                <button>vindue</button>
+                <button>andet</button>
             </section>   
         </section>
         <section class="product_list">
