--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -25,6 +25,8 @@ import "../css/style.css";
         display: flex;
         justify-content: space-evenly;
         background-color: var(--button_yellow);
+        position: fixed;
+        
     }
 
     .flex_small{
