--- a/src/components/DonateSellButtons.astro
+++ b/src/components/DonateSellButtons.astro
@@ -19,7 +19,7 @@ const {text} = Astro.props
 
 button:hover{
     color:var(--font_color);
-    background-color: var(--footer_color);
+    background-color: var(--background_color);
     border:2px solid var(--button_red);
     padding:8px 16px;
 }
