--- a/src/components/ExploreButtons.astro
+++ b/src/components/ExploreButtons.astro
@@ -15,7 +15,7 @@ button{
 
 button:hover{
     color:var(--font_color);
-    background-color: var(--footer_color);
+    background-color: var(--background_color);
     border:2px solid var(--button_red);
     padding:6px 14px;
 }
