--- a/src/components/Process.astro
+++ b/src/components/Process.astro
@@ -18,7 +18,7 @@ const {img, header, text} = Astro.props;
         grid-template-columns: 1fr 1fr;
         margin-top: 20px;
         padding-bottom: 0px;
-        margin-right: 20px;
+      
     }
 
     .img {
@@ -49,6 +49,8 @@ const {img, header, text} = Astro.props;
         grid-template-columns: 1fr 1fr;
         justify-content: flex-start;
         padding-bottom: 30px;
+        margin:0 80px;
+        
     }
         .img {
             margin-top: 0px;
