--- a/src/pages/about_us.astro
+++ b/src/pages/about_us.astro
@@ -11,9 +11,9 @@ import TextBoxAboutUs from "../components/TextBoxAboutUs.astro";
 
     <div class="grid_3-1">
         <div class="div_box"> 
-        <p class="OmOs_Text1">
-            “Jeg kan ikke huske en tid, hvor jeg ikke har leget med lego. Selv da jeg var barn, var jeg kæmpe lego-fan. Her husker jeg tydeligt, hvordan jeg samlede på Harry Potter-sættene, og hvordan hver en klods udgjorde en vigtig del af et samlet puslespil. Da jeg fandt mine gamle lego-sæt frem og begyndte at sortere i det, kom minderne pludselig tilbage.
-        </p>
+            <p class="OmOs_Text1">
+                “Jeg kan ikke huske en tid, hvor jeg ikke har leget med lego. Selv da jeg var barn, var jeg kæmpe lego-fan. Her husker jeg tydeligt, hvordan jeg samlede på Harry Potter-sættene, og hvordan hver en klods udgjorde en vigtig del af et samlet puslespil. Da jeg fandt mine gamle lego-sæt frem og begyndte at sortere i det, kom minderne pludselig tilbage.
+            </p>
         <div class="grid_2-1"> 
         <p>
             Jeg undersøgte, om man mon kunne sælge brugt lego og hvad folk tog for det. Til min store overraskelse syntes jeg, 
@@ -38,7 +38,9 @@ import TextBoxAboutUs from "../components/TextBoxAboutUs.astro";
 <style>
 section {
     margin: 0 20px;
+    padding-top: 40px;
 }
+
 .grid_3-1{
     display: none:
 }
