--- a/src/pages/donate_sell.astro
+++ b/src/pages/donate_sell.astro
@@ -57,11 +57,12 @@ import DonateSell_Indhold from "../components/DonateSell_Indhold.astro";
     }
     section{
         margin:0 20px;
+        padding-top: 40px;
     }
 
     h4{
         font-weight: 300;
-        font-size: 20px;
+        font-size: 26px;
         max-width: 800px;
     }
 
@@ -74,7 +75,7 @@ import DonateSell_Indhold from "../components/DonateSell_Indhold.astro";
         img{
             order:-1;
             min-width: 400px;
-            margin-top: 6px;
+            margin-top: 60px;
             margin-left: 200px;
         }
 
@@ -94,6 +95,7 @@ import DonateSell_Indhold from "../components/DonateSell_Indhold.astro";
         gap:20px;
         display: flex;
         flex-direction: column;
+        margin-top:60px;
     }
 
 
