--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -54,12 +54,12 @@ import ImgBox from "../components/ImgBox.astro";
 
 <style>
     .forsideText{
-        margin-left: 10px;
+        margin-left: 20px;
     }
     h1{
         font-size: 77px;
         font-weight: 900;
-        margin-top: 20px;
+        margin-top: 30px;
     }
     p{
         font-size: 20px;
@@ -82,7 +82,7 @@ import ImgBox from "../components/ImgBox.astro";
         z-index: -1;
     }
     .procent {
-        margin-top: -83px;
+        display: none;
     }
     .box1{
         background-color: var(--background_color);
@@ -118,7 +118,7 @@ import ImgBox from "../components/ImgBox.astro";
         }
 
         .forsideText {
-            ma
+            margin-left: 0px;
         }
         .forside {
             max-width: 100%;
@@ -127,7 +127,7 @@ import ImgBox from "../components/ImgBox.astro";
             margin: 0;
         }
     .procent {
-        margin-top: -135px;
+       display: block;
     }
 
     .imgBox1, .imgBox2{
@@ -141,11 +141,11 @@ import ImgBox from "../components/ImgBox.astro";
     }
     .box1{
         margin-top: 0px;
-        margin-left: 30px;
+        margin-left: 40px;
     }
     .box2{
         background-color: var(--background_color);
-        margin-left: 30px;
+        margin-left: 40px;
     }
 }
     
