--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -26,7 +26,9 @@ import "../css/style.css";
         justify-content: space-evenly;
         background-color: var(--button_yellow);
         position: fixed;
-        
+        width: 100%;
+        margin-top: 0px;
+        z-index:2;
     }
 
     .flex_small{
@@ -41,6 +43,7 @@ import "../css/style.css";
         .flex_big{
             justify-content: center;
             gap: 30px;
+            height: 5em;
         }
 
         .p_banner{
