--- a/src/components/Delivery.astro
+++ b/src/components/Delivery.astro
@@ -41,6 +41,7 @@
     p{
         font-size: 14px;
         font-weight: 400;
+        margin-bottom:40px;
     }
 
     .levering {
@@ -53,8 +54,8 @@
     }
     img{
         width: 2px;
-        height: 64px;
-        margin-top: 10px;
+        height: 60px;
+        margin-top: 16px;
     }
 
     .fragt{
@@ -76,7 +77,7 @@
     }
 
     img{
-        margin-top: 20px;
+        margin-top: 30px;
     }
 
     .fragt{
