--- a/src/components/DonateSell_Indhold.astro
+++ b/src/components/DonateSell_Indhold.astro
@@ -21,6 +21,7 @@ const {title, p1, p2, p3, p4, p5} = Astro.props;
 
     h3{
         margin-top: 20px;
+        font-size: 30px;
     }
 
     @media screen and (min-width: 1000px){
