--- a/src/components/FN.astro
+++ b/src/components/FN.astro
@@ -8,33 +8,39 @@ const {img, text} = Astro.props;
 
 <style>
     .grid_1-1 {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
+        display: flex;
+        justify-content: center;
     }
 
     img{
-        max-width: 60%;
-        margin: 30px;
+        width: 120px;
+        height: 120px;
+        margin-left: 10px;
+        margin-right: 20px;
+        margin:10px 10px;
     }
 
     p{
-        margin-left: -20px;
-        margin-right: 20px;
-        margin-top: 35px;
+     max-width: 260px;
+     padding-top: 14px;
+     margin-right:10px;
     }
     
     @media (min-width: 1000px){
-        img{
-            margin-left: 300px;
-            margin-top: 50px;
-            margin-bottom: 50px;
-        }
+    .grid_1-1 {
+        margin: 40px 0;
+    }
+    img{
+        width: 180px;
+        height: 180px;
+        margin: 30px;
+        margin-left:90px;
+    }
 
-        p{
-            font-size: 22px;
-            margin-left: -200px;
-            margin-right: 300px;
-            margin-top: 90px;
-        }
+
+    p{
+     max-width: 500px;
+  
+    }
     }
 </style>
