--- a/src/components/ImgBox.astro
+++ b/src/components/ImgBox.astro
@@ -8,14 +8,14 @@ const {img} = Astro.props
 <style>
     .box{
         background-color: var(--box_color);
-        z-index: 10;
+        padding:60px 0;
     }
 
     img{
         width: 222px;
         height: 282px;
-        margin-left: 240px;
-        margin-top: 30px;
-        margin-bottom: 30px;
+        margin: auto;
+        display:block;
+        
     }
 </style>
