--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -36,6 +36,10 @@ import "../css/style.css";
     background-color: var(--background_color);
     justify-content: space-between;
     padding: 10px 10px 10px 10px;
+    position: fixed;
+    width: 100%;
+    margin-top: 34px;
+    z-index:2;
 }
 
 .nav_link{
@@ -81,7 +85,7 @@ import "../css/style.css";
     .header_nav{
         padding: 10px 40px 10px 40px;
         justify-content: space-between;
-        a
+        margin-top: 42px;
     }
     
     .burger_menu_icon{
