--- a/src/pages/concept.astro
+++ b/src/pages/concept.astro
@@ -9,7 +9,7 @@ import FN from "../components/FN.astro";
 
 <Mainlayout title="Vores koncept">
 
-    <h1>Vores koncept</h1>
+    <h2>Vores koncept</h2>
 
  <div class="grid_1-1">
     <div class="paragraf">
@@ -32,7 +32,7 @@ import FN from "../components/FN.astro";
 
     <ProcentBanner header="51%" text="Mener at gode genbrugsvare spiller en vigtig rolle for at skabe et bæredygtigt samfund"/>
 
-    <h2>FN verdensmål</h2>
+    <h2 class="FN_text">FN verdensmål</h2>
     <FN img="/img-figur/fn5.webp" alt="FN Verdensmål 5" text="Vi sikrer ligestilling mellem kønnene ved aktivt at fravælge omtalen af køns-pronominer på vores digitale platforme. "/>
     <FN img="/img-figur/fn12.webp" alt="FN Verdensmål 12" text="Vi bidrager til et ansvarligt forbrug og til en cirkulær produktion, da vi handler med brugte legoklodser, der bruges i samme form som da den blev produceret."/>
     <FN img="/img-figur/fn13.webp" alt="FN Verdensmål 13" text="Vi bidrager til at mindske klimaaftrykket på planeten, da vi har taget et aktivt valg om at lave vores digitale webløsning så bæredygtig som muligt."/>
@@ -43,15 +43,15 @@ import FN from "../components/FN.astro";
   .grid_1-1{
         display: grid;
         grid-template-columns: 1fr 1fr;
-        margin: 5px; 
+       
     }
-     h1, h2, p{
-            font-family: var(--system-ui); 
+     h2, p{
             margin: 20px;
-            color: var( --font_color);
         }
+
     .paragraf {
-        width: 200px
+        width: 200px;
+        margin:0 60px; 
     }
 
     .p1, .p3 {
@@ -66,10 +66,11 @@ import FN from "../components/FN.astro";
         padding-bottom: 20px;
     }
 
-    h2{
+
+    .FN_text{
         text-align: center;
         padding-top: 20px;
-        margin-bottom: -10px;
+        margin-bottom: 20px;
     }
 
     @media (min-width: 1000px){
@@ -96,7 +97,8 @@ import FN from "../components/FN.astro";
     }
     h2{
         font-size: 60px;
-        margin-top: 50px;
+        margin-top: 60px;
+        margin-left:120px;
     }
     }
 </style>
