--- a/src/layouts/Mainlayout.astro
+++ b/src/layouts/Mainlayout.astro
@@ -9,7 +9,7 @@ import Footer from "../components/Footer.astro";
 
 <html lang="en">
 	<head>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/icons/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
