--- a/src/components/ConceptGrid.astro
+++ b/src/components/ConceptGrid.astro
@@ -12,13 +12,22 @@ img{
    padding-top: 158px;
     }
 
+    @media (min-width: 700px){
+        img{ 
+            width: 430px;
+            height: 1301px; 
+            margin-top: -500px;
+            margin-bottom: -450px;
+            margin-left: 100px;
+        }
+    }
     @media (min-width: 1000px){
         img{ 
-            width: 530px;
+            width: 630px;
             height: 1301px; 
             margin-top: -400px;
             margin-bottom: -450px;
-            margin-left: 100px;
+            margin-left: -20px;
         }
     }
 </style>
