--- a/src/components/Delivery.astro
+++ b/src/components/Delivery.astro
@@ -1,5 +1,5 @@
 ---
-
+import "../css/style.css";
 ---
 
 <section class="grid_1-1-1">
@@ -28,7 +28,6 @@
     }
 
     h1, p {
-        font-family: var(--system-ui);
         color: var(--button_yellow);
         text-align: center;
     }
