--- a/src/components/DropDown.astro
+++ b/src/components/DropDown.astro
@@ -21,6 +21,7 @@ import "../css/style.css";
         justify-content: space-evenly;
         height: 400px;
         padding-left: 30px;
+        padding-top: 120px;
     }
 
     @media (min-width: 1000px){
