--- a/src/components/FN.astro
+++ b/src/components/FN.astro
@@ -15,15 +15,15 @@ const {img, text} = Astro.props;
     img{
         width: 120px;
         height: 120px;
-        margin-left: 10px;
+        margin-left: 20px;
         margin-right: 20px;
-        margin:10px 10px;
+        margin-bottom: 40px;
     }
 
     p{
      max-width: 260px;
-     padding-top: 14px;
      margin-right:10px;
+     margin-top: 0px;
     }
     
     @media (min-width: 1000px){
@@ -39,8 +39,8 @@ const {img, text} = Astro.props;
 
 
     p{
-     max-width: 500px;
-  
+        max-width: 500px;
+        margin-top: 26px;
     }
     }
 </style>
