--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -53,8 +53,9 @@ import ImgBox from "../components/ImgBox.astro";
 
 
 <style>
+
     .forsideText{
-        margin-left: 20px;
+        margin-left: 10px;
     }
     h1{
         font-size: 77px;
@@ -64,7 +65,7 @@ import ImgBox from "../components/ImgBox.astro";
     p{
         font-size: 20px;
         font-weight: 400;
-        color: #B5B5B5;
+        color: var(--font_color);
         margin-top: -45px;
         margin-bottom: 50px;
     }
@@ -86,8 +87,9 @@ import ImgBox from "../components/ImgBox.astro";
     }
     .box1{
         background-color: var(--background_color);
-        padding: 30px;
+        padding: 30px 30px 30px 0;
         margin-top: -16px;
+        margin-left: 10px;
     }
 
     .imgBox1, .imgBox2{
@@ -95,7 +97,8 @@ import ImgBox from "../components/ImgBox.astro";
     }
     .box2{
         background-color: var(--box_color);
-        padding: 30px;
+        padding: 30px 30px 30px 0;
+        margin-left: 10px;
     }
 
     @media (min-width: 1000px){
