--- a/src/pages/productlist.astro
+++ b/src/pages/productlist.astro
@@ -39,11 +39,11 @@ const options = {
         </section>
         <section class="product_list">
             <h2>Produkter</h2>
-            <section class="search_mobile">
+            <section class="search_mobile sorter">
                 <input type="text" placeholder="Søg..">
             </section>
             <section class="category_mobile">
-                <p>Sorter efter: </p>
+                <p class="sorter">Sorter efter: </p>
                 <div class="button_flex">
                     <button class="aktivknap">Alle</button>
                     <button>klods</button>
@@ -104,7 +104,6 @@ const options = {
 
     h2{
         text-align: center;
-        font-size: 60px;
         margin-top: 80px;
         margin-bottom: 20px;
     }
@@ -135,6 +134,9 @@ const options = {
         justify-content: center;
         gap: 10px;
     }
+    .sorter{
+            margin-left:10px;
+        }
 
 
     @media (min-width: 1000px){
