--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -90,6 +90,7 @@ import ImgBox from "../components/ImgBox.astro";
         padding: 30px 30px 30px 0;
         margin-top: -16px;
         margin-left: 10px;
+        margin-bottom: 20px;
     }
 
     .imgBox1, .imgBox2{
@@ -97,8 +98,8 @@ import ImgBox from "../components/ImgBox.astro";
     }
     .box2{
         background-color: var(--box_color);
-        padding: 30px 30px 30px 0;
-        margin-left: 10px;
+        padding: 30px 30px 50px 10px;
+     
     }
 
     @media (min-width: 1000px){
