--- a/src/components/DropDown.astro
+++ b/src/components/DropDown.astro
@@ -22,6 +22,9 @@ import "../css/style.css";
         height: 400px;
         padding-left: 30px;
         padding-top: 120px;
+        position: fixed;
+        width: 100%;
+        z-index:2;
     }
 
     @media (min-width: 1000px){
