--- a/src/components/HomeExplorebuttons.astro
+++ b/src/components/HomeExplorebuttons.astro
@@ -21,6 +21,7 @@ a:hover{
     background-color: var(--background_color);
     border:2px solid var(--button_red);
     padding:20px 20px;
+    text-decoration:none;
 }
 
 @media screen and (min-width: 1000px){
